fix vertical alignment of header-login

--- a/assets/less/base/ui/header.less
+++ b/assets/less/base/ui/header.less
@@ -102,7 +102,7 @@
 	@media @desktop {
 		display: inline-block;
 		float: right;
-		margin: 6px 1%;
+		margin: 4px 1%;
 	}
 }
 #loginformsubmit {
